--- a/style/style.css
+++ b/style/style.css
@@ -24,16 +24,30 @@ width: 100vw;
     color: #fff;
     margin-left: 30px;
 }
-
 .navigation{
     width: 100%;
+    height: 80px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     position: absolute;
+    background:linear-gradient(#00051F, #00051F, #00051f00);
+    background-position: top 100px;
     z-index: 1000;    
-
 }
+.navigationBlanc{
+    width: 100%;
+    height: 80px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: absolute;
+    background:linear-gradient(#ffffff, #ffffff, #ffffff00);
+    background-position: top 100px;
+    z-index: 1000;    
+}
+
+
 .navigation ul{
     display: flex;
     flex-direction: row-reverse;
